--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,40 @@
 @tailwind utilities;
 
 .layout {
-    max-width: 1400px;
-    @apply mx-auto w-full;
+  max-width: 1400px;
+  @apply w-full mx-auto;
+}
+
+[data-fade] {
+  @apply translate-y-0 opacity-0 transition duration-[400ms] ease-out motion-reduce:translate-y-0 motion-reduce:opacity-100;
+}
+
+.fade-in-start [data-fade] {
+  @apply translate-y-0 opacity-100;
+}
+
+.fade-in-start [data-fade="1"] {
+  transition-delay: 100ms;
+}
+
+.fade-in-start [data-fade="2"] {
+  transition-delay: 200ms;
+}
+.fade-in-start [data-fade="3"] {
+  transition-delay: 300ms;
+}
+.fade-in-start [data-fade="4"] {
+  transition-delay: 400ms;
+}
+.fade-in-start [data-fade="5"] {
+  transition-delay: 500ms;
+}
+.fade-in-start [data-fade="6"] {
+  transition-delay: 600ms;
+}
+.fade-in-start [data-fade="7"] {
+  transition-delay: 700ms;
+}
+.fade-in-start [data-fade="8"] {
+  transition-delay: 800ms;
 }
